fix: 사진 gap 추가

--- a/2기/jungsu/week2/style/tab.css
+++ b/2기/jungsu/week2/style/tab.css
@@ -186,6 +186,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 25rem;
+  gap: 16px;
 }
 
 @media (max-width: 1023px) {
